02_실전캠프_Day2_실습제출/3조_강상구_숯불에닭/v2/프로젝트/README.md
# 숯불에닭 한눈 손익 장부 · v2

v1(월 정산 손익 한 장)에 **오늘 마감 입력 · 정산 주기 규칙으로 통장 입금 짝 맞추기 · 원가율 탭 · 사용법 페이지**를 더한 버전입니다. 기획은 [`../PRD.md`](../PRD.md).

| 탭 | 하는 일 |
|---|---|
| 손익 | 임대료 포함 영업이익 한 장. 일별 합계와 정산 결과로 자동 계산 |
| 오늘 | 마감 때 채널별 매출 + 시급제 직원 근무시간 (1분). 카드는 "+ 카드사 추가"로 카드사를 고르고 금액 입력(포스 마감정산서와 같은 이름·간편결제 포함) → 카드 합계. 달력·누적·인건비율. 직원·채널 설정 |
| 올리기 | 은행 엑셀 자동 분류, 확인 필요 줄, 지출 직접 추가 |
| 정산 | 정산 규칙(+N영업일 / 주 단위) → 입금 짝 맞추기 → 채널별 수수료율. 규칙 없는 채널은 직접 입력 |
| 원가율 | 포스 상품ABC분석 엑셀 → 이론 원가율 vs 통장 원가율, 메뉴별 원가율·마진. 품목·레시피 설정 |
| 날씨 (/weather) | 일별 매출에 청주 날씨를 자동으로 붙여 날씨별·요일별 평균, 비 오는 날 효과, 예보별 예상 매출. 오늘 탭 카드에서 들어감 |
| 규칙 | 분류 규칙, 백업, 사용법 페이지 |

## 열어 보기

시연 주소: https://sootdak-ledger.vercel.app (v2 · 시연 모드 — **가짜 데이터만** 넣으세요. 로그인이 없어 누구나 볼 수 있습니다)

고친 뒤 다시 올리기: 이 폴더에서 `npx vercel deploy --prod`

## 실행

```
npm install
npm run dev      # http://localhost:3200
```

처음이면 규칙 탭 맨 위 **"처음이세요? 사용법"**을 열어 보세요. 시연은 **오늘 탭 "가짜 예시 자료 넣기" → 올리기 탭 "가짜 9월 파일" → 정산 탭 "기본 규칙 넣기" → 원가율 탭 "가짜 품목·레시피 넣기"·"가짜 9월 포스 파일" → 손익 탭** 순서입니다.

## 저장 모드 두 가지 (중요)

| 모드 | 언제 | 데이터가 있는 곳 |
|---|---|---|
| **내 PC 모드** (기본) | 내 컴퓨터에서 `npm run dev` | 이 컴퓨터의 브라우저. 규칙 탭에서 백업 파일 저장/불러오기 |
| **시연 모드** | `.env.local`에 `NEXT_PUBLIC_STORAGE=supabase` + 열쇠 2개 | Supabase. **로그인이 없어 누구나 볼 수 있으니 가짜 데이터만** |

- 실제 통장·매출 숫자는 **내 PC 모드에서만** 넣습니다. 열쇠가 있어도 `NEXT_PUBLIC_STORAGE=supabase`가 없으면 Supabase로 보내지 않습니다.
- 은행 엑셀 파일은 브라우저 안에서만 읽습니다. 파일 자체는 어디에도 올라가지 않습니다.
- 시연 모드 준비: `supabase/schema.sql`을 Supabase SQL Editor에서 실행 → `환경변수_예시.txt`를 보고 `.env.local` 작성 (service_role 키는 쓰지 않음).

## 구조

```
app/          손익(/) · 오늘(/today) · 올리기(/upload) · 정산(/channels) · 원가율(/costing) · 규칙(/rules) · 사용법(/guide) · 날씨(/weather)
components/   AppShell(모드 띠·달 선택·아래 탭) · useLedger(한 달 데이터) · ui
lib/          categories(8개 대분류) · bank/parse(은행 엑셀 읽기) · classify(자동 분류)
              pnl(손익) · channels(수수료·입금 대조) · validate(이상 숫자) · month(마감·중복)
              daily(일별 매출·근무) · settlement(정산 규칙·입금 짝 맞추기) · effective(손익용 실매출) · weather(Open-Meteo·날씨별 분석)
              costing/(포스 ABC 파서 · 레시피 원가 · 원가율 리포트 · 가짜 시드)
              storage/(local · supabase · backup) · seed(가짜 거래처 규칙·예시 실매출)
scripts/      make-sample-xlsx.mjs(8월 은행) · make-sample-daily.mjs(9월 일별+은행) · make-sample-pos.mjs(9월 포스)
supabase/     schema.sql — 시연 모드 테이블과 잠금(RLS)
```

## 계산 규칙

- **기준 시점**: 매출·배달앱 수수료는 "주문이 발생한 달", 비용은 "통장에서 돈이 나간 날". 주문일과 입금일이 다르기 때문에 둘을 섞지 않습니다.
- 매출 = 채널 입력의 **주문금액** 합계(홀 + 배달앱). 통장의 앱 입금 줄은 매출로 또 더하지 않고 대조에만 씁니다.
- 배달앱 수수료 = 주문금액 − **정산금액**(그 달 주문분에서 수수료를 빼고 받을 돈. 다음 달 초에 입금되는 월말 주문분 포함) → 영업비 안에 "배달앱 수수료"로 표시. 홀의 카드수수료는 통장 출금으로 잡힙니다.
- 통장 대조: 지난달 말 미입금액 + 이 달 정산금액 − 이 달 말 미입금액(선택 입력) = 이 달 통장에 들어와야 할 돈. 통장과 다르면 빨간색, 월말 미입금액을 안 넣었으면 회색 "시차 포함".
- 손익 순서: 매출액 → 매출원가 → 매출총이익 → 가맹수수료 → 경영주수입 → 영업비·**임대료**·세금과공과·노무관리비·기타 → 영업이익.
- `기타 › 생활비`는 가게 비용에서 빼고 "내가 가져간 돈"으로 따로 보여 줍니다.
- 채널 입력이 없는 달은 통장 입금액을 매출로 쓰고 화면에 "입금액 기준"이라고 알립니다.

## 테스트

```
npm test          # 계산 로직 42개 (가짜 엑셀 한 바퀴 포함)
npm run typecheck
npm run build
```

실제 직원·거래처 이름, 실제 은행 파일, 백업 파일(.json), `.env*`는 저장소에 올리지 않습니다.
